--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-cssmin": "~0.6.0",
+	"grunt-contrib-imagemin": "^0.8.1",
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-watch": "~0.2.0",
